1.切换nakama-common到jiangben 添加wechat 和 tiktok登录 2.admin后台修改
